fixed scaling of canvas
We over size the canvas (for most workstations) then disable overflow to prevent the sketch.js bug where resizing the window skews the image.  Rendering speed seems to scale better (though memory looks bad).

--- a/boot-tomcat/src/main/webapp/resources/css/app.css
+++ b/boot-tomcat/src/main/webapp/resources/css/app.css
@@ -1,5 +1,16 @@
+body{
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
+
 header {
-	height: 260px;
+	height: 131px;
+}
+
+canvas{
+	overflow: hidden;
+	background-color: white;
 }
 
 h1 {
